# adventofcode

./: .gitignore  README.md
2019/: day_01_A.py  day_01_B.py  day_02_A.py  day_02_B.py  day_03_A.py  day_03_B.py  day_04_AB.py
2020/: dau_18_AB.py  day_01_A.py  day_01_AB.py  day_01_B.py  day_02_A.py  day_02_AB.py  day_02_B.py  day_03_A.py  day_03_B.py  day_04_A.py  day_04_B.py  day_05_A.py  day_05_AB.py  day_05_B.py  day_06_AB.py  day_07_AB.py  day_07_A_networkx.py  day_08_A.py  day_08_AB.py  day_09_AB.py  day_10_AB.py  day_11_A.py  day_11_AB.py  day_11_AB_text_version.py  (+19 more)
2023/: .env.sample  README.md  aoc_utils.py  day_01.py  day_01_small.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07_part_A.py  day_07_part_B.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_12_input.txt  day_13.py  day_14 (set of coord).py  day_14.py  day_14_input.txt  day_15.py  day_15_input.txt  day_16.py  day_16_no_class.py  day_17.py  day_17_no_class.py  day_17_viz.py  day_18.md  day_18.py  day_18_input.txt  day_19.py  day_19_input.txt  day_19_part_A.py  day_19_part_B.py  day_20.py  day_21.py  day_22.py  day_22_input.txt  (+7 more)
2023/tests/: _test_template.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07_part_A.py  test_day_07_part_B.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py  test_day_22.py  test_day_23.py  test_day_24.py  test_day_25.py
(+170 files in other folders)
