[tool.poetry]
name = "2023"
version = "0.1.0"
description = ""
authors = ["PhunkyBob <github.com@e-courrier.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^23.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
